[package]
name = "xtorrent"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A ground built bittorrent client with bencode parser library and binary"
homepage = "https://xpanvictor.github.io/technology/software/2024/01/20/implementing-bittorrent-protocol-rust.html"
repository = "https://github.com/xpanvictor/xtorrent-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "bencode-parser"
path = "src/bin/ben_parser.rs"
